# kk_ws

./: .gitignore  README.md
src/Yolov8_ros/: DUAL_CAMERA_INTERFACE_CN.md
src/Yolov8_ros/yolov8_ros/: CMakeLists.txt  package.xml
src/Yolov8_ros/yolov8_ros/launch/: camera_detect.launch  camera_detect_dual.launch  camera_detect_dual_origin.launch  camera_detect_front.launch  camera_detect_rqt.launch  ros_predict.launch  yolo_v8_new.launch
src/Yolov8_ros/yolov8_ros/scripts/: ros_predict copy.py  ros_predict.py  ros_predict_origin.py  yolo_v8_new.py
src/Yolov8_ros/yolov8_ros_msgs/: CMakeLists.txt
src/Yolov8_ros/yolov8_ros_msgs/msg/: YoloDetection.msg
src/abot_bringup/launch/: location.launch
src/abot_bringup/param/: costmap_common_params.yaml
src/complete_mission_kk/: CMakeLists.txt  package.xml
src/complete_mission_kk/cfg/: lll.yaml  map_accumulator.yaml
src/complete_mission_kk/include/: complete_mission.h  traj_control.h
src/complete_mission_kk/launch/: ab_detect.launch  advanced_param.xml  ego.rviz  ego_planner_mid360.launch  laser_to_worldframe.launch  lll.launch  map_accumulator.launch  mission.launch  usb_cam.launch
src/complete_mission_kk/model/: ab_svm.xml
src/complete_mission_kk/scripts/: ab_detect_node.py  ab_test_svm.py  ab_train_svm.py  ptrsc_ros.py
src/complete_mission_kk/shell/: lll.sh
src/complete_mission_kk/src/: .complete_mission.cpp.swn  .complete_mission.cpp.swo  .complete_mission.cpp.swp  complete_mission.cpp  complete_mission_old.cpp  lll.cpp  map_accumulator.cpp  traj_control_demo.cpp  vision.md
src/drop_target_relative/drop_target_relative/: CMakeLists.txt  README.md  package.xml
src/drop_target_relative/drop_target_relative/config/: drop_target_relative.yaml
src/drop_target_relative/drop_target_relative/launch/: drop_target_relative.launch
src/drop_target_relative/drop_target_relative/msg/: Detection.msg
src/drop_target_relative/drop_target_relative/src/: drop_target_relative_node.cpp
src/laser_servo_control/: CMakeLists.txt  README  package.xml
src/laser_servo_control/arduino/: arduino.ino
src/laser_servo_control/launch/: laser_servo_control.launch
src/obstacle_detector/: CMakeLists.txt  package.xml
src/obstacle_detector/launch/: obstacle_detector.launch
src/obstacle_detector/msg/: ObstacleStatus.msg
src/obstacle_detector/src/: obstacle_detector_node.cpp
src/radar_curve_planner/: CHECK_REPORT.txt  CMakeLists.txt  README.md  package.xml
src/radar_curve_planner/config/: mission_params.yaml  planner_params.yaml
src/radar_curve_planner/launch/: radar_curve_planner.launch  view_yaml_traj.launch
src/radar_curve_planner/rviz/: radar_curve_planner.rviz
src/radar_curve_planner/scripts/: view_yaml_traj.py
src/radar_curve_planner/src/: curve_yaml_writer_node.cpp  radar_midpoint_node.cpp
src/radar_curve_planner/tmp/: radar_generated_traj.yaml  traj_13.yaml  traj_24.yaml
src/trajectory_visualizer/: CHECK_REPORT.txt  CMakeLists.txt  README.md  package.xml
src/trajectory_visualizer/config/: visualizer_params.yaml
src/trajectory_visualizer/launch/: demo_signal.launch  trajectory_visualizer.launch
src/trajectory_visualizer/rviz/: trajectory_visualizer.rviz
src/trajectory_visualizer/scripts/: send_traj_signal.py  trajectory_visualizer_node.py
