<?xml version="1.0"?>
<package format="2">
  <name>radar_curve_planner</name>
  <version>0.3.0</version>
  <description>EGO-lite radar curve planner with virtual wall, A* search, safe smoothing, YAML writer, and RViz visualization.</description>
  <maintainer email="user@example.com">radar_curve_planner</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>rviz</exec_depend>

  <export/>
</package>
