<?xml version="1.0"?>
<package format="2">
  <name>trajectory_visualizer</name>
  <version>0.1.0</version>
  <description>Visualize pre-defined YAML trajectories on request.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export/>
</package>
